# tauri-voice-plugin

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md
spec/Tauri Recorder/CODIN-234/: HLD.md  LLD.md
spec/Tauri Recorder/CODIN-235/: HLD.md  LLD.md
spec/Tauri Recorder/CODIN-236/: HLD.md  LLD.md
spec/Tauri Recorder/CODIN-237/: HLD.md  LLD.md
spec/Tauri Recorder/CODIN-238/: HLD.md  LLD.md
spec/Tauri Recorder/CODIN-239/: HLD.md  LLD.md
spec/Tauri Recorder/CODIN-240/: LLD.md
spec/Tauri Recorder/CODIN-242/: HLD.md  LLD.md
spec/Tauri Recorder/CODIN-251/: HLD.md  LLD.md
spec/Tauri Recorder/CODIN-252/: HLD.md  LLD.md
spec/Tauri Recorder/CODIN-254/: HLD.md  LLD.md
spec/Tauri Recorder/CODIN-256/: HLD.md  LLD.md
spec/Tauri Recorder/CODIN-257/: HLD.md  LLD.md
spec/tauri-plugin-stt/CODIN-255/: HLD.md
tauri-plugin-stt/: .gitignore  Cargo.toml  README.md  USAGE.md  build.rs  package.json  pnpm-lock.yaml
tauri-plugin-stt/examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-stt/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-stt/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-stt/guest-js/: index.ts
tauri-plugin-stt/permissions/: default.toml
tauri-plugin-stt/requirements/: requirements-stt.lock.txt
tauri-plugin-stt/scripts/: transcribe.py  worker.py
tauri-plugin-stt/src/: bootstrap_manager.rs  commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  recorder_manager.rs  sidecar_uv.rs
tauri-plugin-stt/tests/: smoke_contract.rs  startup_config.rs
(+27 files in other folders)
