[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tauri-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-stt = { path = "../../../" }
tauri-plugin-shell = { version = "2" }
tauri-plugin-recorder = { path = "../../../../../tauri_recorder_plugin/tauri-plugin-recorder" }
